--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: main
+  branch: main 
 
 media_folder: "public/uploads"
 public_folder: "/uploads"
@@ -13,17 +13,12 @@ collections:
     slug: "{{slug}}"
     fields:
       - { label: "Title", name: "title", widget: "string" }
+      - { label: "Meta Title", name: "meta_title", widget: "string", required: false }
+      - { label: "Description", name: "description", widget: "text", required: false, hint: "Used for SEO meta description." }
+      - { label: "Image", name: "image", widget: "image", required: false }
       - { label: "Date", name: "date", widget: "datetime" }
+      - { label: "Categories", name: "categories", widget: "list", required: false }
+      - { label: "Tags", name: "tags", widget: "list", required: false }
+      - { label: "Authors", name: "authors", widget: "list", required: false }
       - { label: "Body", name: "body", widget: "markdown" }
 
-      # ✅ SEO Fields
-      - label: "SEO Settings"
-        name: "seo"
-        widget: "object"
-        collapsed: true
-        fields:
-          - { label: "Meta Title", name: "meta_title", widget: "string", required: false }
-          - { label: "Meta Description", name: "meta_description", widget: "text", required: false }
-          - { label: "Canonical URL", name: "canonical_url", widget: "string", required: false }
-          - { label: "OG Image", name: "og_image", widget: "image", required: false }
-          - { label: "Twitter Card Image", name: "twitter_image", widget: "image", required: false }
