--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,7 +1,7 @@
 {
   "site": {
     "title": "The Sleep Habits",
-    "base_url": "https://bookworm-light-astro.vercel.app",
+    "base_url": "https://thesleephabits.com",
     "base_path": "/",
     "trailing_slash": false,
     "favicon": "/images/favicon.png",
@@ -17,19 +17,19 @@
   },
 
   "metadata": {
-    "meta_author": "Themefisher",
+    "meta_author": "The Sleep Habits",
     "meta_image": "/images/og-image.png",
     "meta_description": "The Sleep Habits"
   },
 
   "params": {
     "contact_form_action": "#",
-    "copyright": "Copyright © 2025 a theme by [Themefisher](https://themefisher.com)"
+    "copyright": "Copyright © 2025"
   },
 
   "contactinfo": {
     "address": "355 S Grand Ave <br/> Los Angeles, CA 90071",
-    "email": "info@bookworm.org",
+    "email": "thesleephabits@gmail.com",
     "phone": "+800 567 1234"
   }
 }
