--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: main 
+  branch: main
 
 media_folder: "public/uploads"
 public_folder: "/uploads"
@@ -23,3 +23,15 @@ collections:
       - { label: "Body", name: "body", widget: "markdown" }
       - { name: "noindex", label: "No Index", widget: "boolean", default: false }
 
+  - name: "pages"
+    label: "Pages"
+    folder: "src/content/pages"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Meta Title", name: "meta_title", widget: "string", required: false }
+      - { label: "Description", name: "description", widget: "text", required: false, hint: "Used for SEO meta description." }
+      - { label: "Image", name: "image", widget: "image", required: false }
+      - { label: "Body", name: "body", widget: "markdown" }
+      - { name: "noindex", label: "No Index", widget: "boolean", default: false }
