--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -35,3 +35,19 @@ collections:
       - { label: "Image", name: "image", widget: "image", required: false }
       - { label: "Body", name: "body", widget: "markdown" }
       - { name: "noindex", label: "No Index", widget: "boolean", default: false }
+
+  - name: "content-planner"
+    label: "🗂️ Content Planner"
+    folder: "content/planner"
+    create: true
+    slug: "{{slug}}"
+    format: "json"
+    identifier_field: "topic"
+    editor:
+      preview: false
+    fields:
+      - { name: "topic", label: "Topic / Idea", widget: "string" }
+      - { name: "keyword", label: "Target Keyword", widget: "string" }
+      - { name: "status", label: "Status", widget: "select", options: ["Idea", "Draft", "In Progress", "Published"] }
+      - { name: "date", label: "Target Date", widget: "datetime", format: "YYYY-MM-DD" }
+
